[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/img.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1019.0
margin_bottom = 593.0

[node name="imgoptions" type="OptionButton" parent="."]
margin_top = 2.0
margin_right = 1017.0
margin_bottom = 60.0

[node name="pimg" type="Button" parent="."]
margin_left = 12.0
margin_top = 257.0
margin_right = 81.0
margin_bottom = 320.0
text = "n-1"

[node name="upload_img" type="Button" parent="."]
margin_left = 536.0
margin_top = 532.0
margin_right = 680.0
margin_bottom = 567.0
text = "upload"

[node name="refimg" type="Button" parent="."]
margin_left = 418.0
margin_top = 63.0
margin_right = 562.0
margin_bottom = 98.0
text = "ref img"

[node name="nextimg" type="Button" parent="."]
margin_left = 856.0
margin_top = 234.0
margin_right = 919.0
margin_bottom = 305.0
text = "n+1"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="code" type="Button" parent="."]
margin_left = 864.0
margin_top = 84.0
margin_right = 1004.0
margin_bottom = 203.0
text = "code"

[node name="Button" type="Button" parent="."]
margin_left = 325.0
margin_top = 524.0
margin_right = 474.0
margin_bottom = 573.0
text = "SELECT IMAGFE"

[node name="MenuButton" type="FileDialog" parent="."]
margin_left = 35.0
margin_top = 109.0
margin_right = 1016.0
margin_bottom = 566.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2

[node name="container" type="Container" parent="."]
margin_left = 343.0
margin_top = 120.0
margin_right = 654.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite" type="Sprite" parent="container"]
position = Vector2( 147, 179 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="code" to="." method="_on_code_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="MenuButton" to="." method="_on_MenuButton_file_selected"]
